namespace Ordering.Core.Enums;

public enum OrderStatus
{
    Created,
    Paid,
    Shipped,
    Cancelled
}